RESOLVED FIXED235618
Fix some spelling errors in Color functions
https://bugs.webkit.org/show_bug.cgi?id=235618
Summary Fix some spelling errors in Color functions
Simon Fraser (smfr)
Reported 2022-01-25 16:01:54 PST
Fix some spelling errors in Color functions
Attachments
Patch (4.17 KB, patch)
2022-01-25 16:04 PST, Simon Fraser (smfr)
wenson_hsieh: review+
Simon Fraser (smfr)
Comment 1 2022-01-25 16:04:48 PST
Wenson Hsieh
Comment 2 2022-01-25 16:05:17 PST
Comment on attachment 449979 [details] Patch rs=me
Simon Fraser (smfr)
Comment 3 2022-01-25 16:15:17 PST
Radar WebKit Bug Importer
Comment 4 2022-01-25 16:16:20 PST
Darin Adler
Comment 5 2022-01-25 17:04:34 PST
Comment on attachment 449979 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=449979&action=review > Source/WebCore/ChangeLog:3 > + Fix some spelling errors in Color functions You really scared me. I was thinking, is the misspelled word "colour"?
Note You need to log in before you can comment on or make changes to this bug.