Fix some spelling errors in Color functions https://bugs.webkit.org/show_bug.cgi?id=235618

Reviewed by Wenson Hsieh.

Fix the spelling of outOfLineComponentsEqual and outOfLineComponentsEqualIgnoringSemanticColor.

* platform/graphics/Color.h:
(WebCore::operator==):
(WebCore::outOfLineComponentsEqual):
(WebCore::outOfLineComponentsEqualIgnoringSemanticColor):
(WebCore::equalIgnoringSemanticColor):
(WebCore::outOfLineComponentssEqual): Deleted.
(WebCore::outOfLineComponentssEqualIgnoringSemanticColor): Deleted.


Canonical link: https://commits.webkit.org/246410@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288588 268f45cc-cd09-0410-ab3c-d52691b4dbfc